force-app/main/default/objects/OLP_Run__c/OLP_Run__c.object-meta.xml
<CustomObject>
    <label>OLP Run</label>
    <nameField>
        <displayFormat>OLP-R-{0000000}</displayFormat>
        <label>OLP Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OLP Run</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>