force-app/main/default/objects/OLP_Run__c/fields/Count_of_Workers__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Workers__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Count of Workers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>