force-app/main/default/objects/OLP_Run__c/fields/Cron_Trigger_Id__c.field-meta.xml
<CustomField>
    <fullName>Cron_Trigger_Id__c</fullName>
    <label>Cron Trigger Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>