force-app/main/default/objects/OLP_Run__c/fields/Finish_Only__c.field-meta.xml
<CustomField>
    <fullName>Finish_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes when a run does not pick up any worker records and executes only the batchable finish method</description>
    <label>Finish Only</label>
    <type>Checkbox</type>
</CustomField>