force-app/main/default/objects/OLP_Run__c/fields/Interval__c.field-meta.xml
<CustomField>
    <fullName>Interval__c</fullName>
    <label>Interval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15 Minutes</fullName>
            </value>
            <value>
                <fullName>2 Hours</fullName>
            </value>
            <value>
                <fullName>6 Hours</fullName>
            </value>
            <value>
                <fullName>24 Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>