force-app/main/default/objects/OLP_Run__c/fields/Workers_Processed__c.field-meta.xml
<CustomField>
    <fullName>Workers_Processed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Workers Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>